[gd_scene load_steps=7 format=2]

[ext_resource path="res://interfaces/store/cart_button.png" type="Texture" id=1]
[ext_resource path="res://interfaces/store/store.tscn" type="PackedScene" id=2]
[ext_resource path="res://interfaces/store/store_button.gd" type="Script" id=3]
[ext_resource path="res://characters/customers/effects/patience_change/exclamation mark.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Exclamation:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "new_item"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Exclamation:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Exclamation:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 3, 3 ), Vector2( 2, 2 ), Vector2( 3, 3 ) ]
}

[node name="TextureButton" type="TextureButton"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
Store = ExtResource( 2 )

[node name="Exclamation" type="Sprite" parent="."]
position = Vector2( 28, -29 )
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 1 )
anims/new_item = SubResource( 2 )

[connection signal="mouse_entered" from="." to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_TextureButton_pressed"]
